--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -32,24 +32,124 @@
     <widget class="QGraphicsView" name="imgVideo">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>20</y>
+       <x>140</x>
+       <y>10</y>
        <width>640</width>
        <height>480</height>
       </rect>
+     </property>
+     <property name="resizeAnchor">
+      <enum>QGraphicsView::AnchorViewCenter</enum>
      </property>
     </widget>
     <widget class="QPushButton" name="cmdCoriander">
      <property name="geometry">
       <rect>
-       <x>340</x>
-       <y>510</y>
+       <x>140</x>
+       <y>500</y>
        <width>111</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>Start Coriander</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="cmdStopVideo">
+     <property name="geometry">
+      <rect>
+       <x>670</x>
+       <y>500</y>
+       <width>111</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>S&amp;top</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="cmdStartVideo">
+     <property name="geometry">
+      <rect>
+       <x>550</x>
+       <y>500</y>
+       <width>111</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&amp;Start</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtSource">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>121</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lblSource">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Source:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="cmdAddSource">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>70</y>
+       <width>87</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&amp;Add</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="cmbConversion">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>500</y>
+       <width>171</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="maxVisibleItems">
+      <number>5</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lblConversion">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>500</y>
+       <width>81</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Conversion:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
    </widget>
