--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -182,7 +182,7 @@
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>340</y>
+        <y>400</y>
         <width>87</width>
         <height>27</height>
        </rect>
@@ -356,7 +356,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>3</string>
+       <string>8</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="txtPatternX">
@@ -369,7 +369,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>20</string>
+       <string>5</string>
       </property>
      </widget>
      <widget class="QLabel" name="lblPatternX">
@@ -398,7 +398,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>10</string>
+       <string>2</string>
       </property>
      </widget>
      <widget class="QLabel" name="lblCalibrationFrames">
@@ -412,6 +412,64 @@
       </property>
       <property name="text">
        <string>No. of frames for calibration:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lblCalibrationSquareSize">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>340</y>
+        <width>251</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Square size:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="txtCalibrationSquareSize">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>340</y>
+        <width>41</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>1.0</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="txtCalibrationBorders">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>370</y>
+        <width>41</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>10</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="lblCalibrationBorders">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>370</y>
+        <width>251</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Additional borders [%]</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
