--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -248,8 +248,8 @@
        <rect>
         <x>0</x>
         <y>30</y>
-        <width>481</width>
-        <height>361</height>
+        <width>480</width>
+        <height>360</height>
        </rect>
       </property>
       <property name="verticalScrollBarPolicy">
@@ -602,11 +602,11 @@
      <property name="checkable">
       <bool>false</bool>
      </property>
-     <widget class="QPushButton" name="cmdCCalibrateTransformation">
+     <widget class="QPushButton" name="cmdCalibrateTransformation">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>330</y>
+        <x>600</x>
+        <y>210</y>
         <width>87</width>
         <height>27</height>
        </rect>
@@ -618,10 +618,10 @@
      <widget class="QGraphicsView" name="imgTransformation">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>30</y>
-        <width>451</width>
-        <height>291</height>
+        <x>10</x>
+        <y>20</y>
+        <width>480</width>
+        <height>360</height>
        </rect>
       </property>
      </widget>
@@ -634,6 +634,51 @@
     <attribute name="title">
      <string>Object Recognition</string>
     </attribute>
+    <widget class="QGroupBox" name="grbRecognition">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>771</width>
+       <height>541</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Object Recognition</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
+     <widget class="QPushButton" name="cmdStartRecognition">
+      <property name="geometry">
+       <rect>
+        <x>600</x>
+        <y>210</y>
+        <width>87</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&amp;Start</string>
+      </property>
+     </widget>
+     <widget class="QGraphicsView" name="imgRecognition">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>480</width>
+        <height>360</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QLabel" name="lblStatus">
