Added functions to set manual borders for croped image.

--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -820,7 +820,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>&amp;Start</string>
+       <string>S&amp;top</string>
       </property>
      </widget>
     </widget>
