--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>697</width>
-    <height>660</height>
+    <width>800</width>
+    <height>650</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>mrVision</string>
@@ -43,8 +55,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>677</width>
-        <height>616</height>
+        <width>780</width>
+        <height>606</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -181,13 +193,6 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="4" colspan="2">
-            <widget class="QPushButton" name="cmdCoriander">
-             <property name="text">
-              <string>Start Coriander</string>
-             </property>
-            </widget>
-           </item>
            <item row="4" column="0" colspan="2">
             <widget class="QListWidget" name="lstSources">
              <property name="sizePolicy">
@@ -205,6 +210,20 @@
             <widget class="QPushButton" name="cmdDelSource">
              <property name="text">
               <string>&amp;Remove</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="4">
+            <widget class="QPushButton" name="cmdCoriander">
+             <property name="text">
+              <string>Start Coriander</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="5">
+            <widget class="QPushButton" name="cmdSaveImg">
+             <property name="text">
+              <string>Save &amp;image</string>
              </property>
             </widget>
            </item>
