--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -69,7 +69,7 @@
        <item row="0" column="0">
         <widget class="QTabWidget" name="tabWidget">
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="tabImage">
           <attribute name="title">
@@ -255,7 +255,20 @@
               <bool>false</bool>
              </property>
              <layout class="QGridLayout" name="gridLayout_4">
-              <item row="0" column="2" rowspan="4">
+              <item row="0" column="0" rowspan="3">
+               <widget class="QGraphicsView" name="imgDistortion">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="verticalScrollBarPolicy">
+                 <enum>Qt::ScrollBarAsNeeded</enum>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1" rowspan="4">
                <widget class="QWidget" name="widget" native="true">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -632,7 +645,7 @@
                  <property name="geometry">
                   <rect>
                    <x>120</x>
-                   <y>160</y>
+                   <y>150</y>
                    <width>87</width>
                    <height>27</height>
                   </rect>
@@ -645,7 +658,7 @@
                  <property name="geometry">
                   <rect>
                    <x>120</x>
-                   <y>190</y>
+                   <y>180</y>
                    <width>87</width>
                    <height>27</height>
                   </rect>
@@ -658,13 +671,26 @@
                  <property name="geometry">
                   <rect>
                    <x>120</x>
-                   <y>220</y>
+                   <y>210</y>
                    <width>87</width>
                    <height>27</height>
                   </rect>
                  </property>
                  <property name="text">
                   <string>&amp;Load</string>
+                 </property>
+                </widget>
+                <widget class="QPushButton" name="cmdSaveImgDistortion">
+                 <property name="geometry">
+                  <rect>
+                   <x>120</x>
+                   <y>240</y>
+                   <width>85</width>
+                   <height>27</height>
+                  </rect>
+                 </property>
+                 <property name="text">
+                  <string>Save img</string>
                  </property>
                 </widget>
                </widget>
@@ -815,19 +841,6 @@
                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                  </property>
                 </widget>
-               </widget>
-              </item>
-              <item row="0" column="0" rowspan="3">
-               <widget class="QGraphicsView" name="imgDistortion">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="verticalScrollBarPolicy">
-                 <enum>Qt::ScrollBarAsNeeded</enum>
-                </property>
                </widget>
               </item>
              </layout>
