--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -1238,31 +1238,6 @@
                    <property name="title">
                     <string>Marker area detection</string>
                    </property>
-                   <widget class="QSlider" name="sliderThesholdMarkerArea">
-                    <property name="geometry">
-                     <rect>
-                      <x>10</x>
-                      <y>110</y>
-                      <width>281</width>
-                      <height>20</height>
-                     </rect>
-                    </property>
-                    <property name="maximum">
-                     <number>255</number>
-                    </property>
-                    <property name="singleStep">
-                     <number>2</number>
-                    </property>
-                    <property name="value">
-                     <number>50</number>
-                    </property>
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="tickPosition">
-                     <enum>QSlider::TicksBelow</enum>
-                    </property>
-                   </widget>
                    <widget class="QLabel" name="label_3">
                     <property name="geometry">
                      <rect>
@@ -1289,7 +1264,7 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>5</string>
+                     <string>0.054</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1321,30 +1296,17 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>25</string>
+                     <string>0.055</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                    </property>
-                   </widget>
-                   <widget class="QLabel" name="label_5">
-                    <property name="geometry">
-                     <rect>
-                      <x>10</x>
-                      <y>90</y>
-                      <width>281</width>
-                      <height>20</height>
-                     </rect>
-                    </property>
-                    <property name="text">
-                     <string>Binary threshold</string>
                     </property>
                    </widget>
                    <widget class="QLineEdit" name="txtMarkerAreaEpsilon">
                     <property name="geometry">
                      <rect>
                       <x>250</x>
-                      <y>60</y>
+                      <y>110</y>
                       <width>41</width>
                       <height>27</height>
                      </rect>
@@ -1360,7 +1322,7 @@
                     <property name="geometry">
                      <rect>
                       <x>10</x>
-                      <y>60</y>
+                      <y>110</y>
                       <width>231</width>
                       <height>31</height>
                      </rect>
@@ -1370,88 +1332,6 @@
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                    </property>
-                   </widget>
-                   <widget class="QSlider" name="sliderMarkerAreaCannyDown">
-                    <property name="geometry">
-                     <rect>
-                      <x>10</x>
-                      <y>160</y>
-                      <width>121</width>
-                      <height>20</height>
-                     </rect>
-                    </property>
-                    <property name="maximum">
-                     <number>255</number>
-                    </property>
-                    <property name="singleStep">
-                     <number>10</number>
-                    </property>
-                    <property name="value">
-                     <number>30</number>
-                    </property>
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="tickPosition">
-                     <enum>QSlider::TicksBelow</enum>
-                    </property>
-                   </widget>
-                   <widget class="QSlider" name="sliderMarkerAreaCannyUp">
-                    <property name="geometry">
-                     <rect>
-                      <x>160</x>
-                      <y>160</y>
-                      <width>131</width>
-                      <height>20</height>
-                     </rect>
-                    </property>
-                    <property name="maximum">
-                     <number>255</number>
-                    </property>
-                    <property name="singleStep">
-                     <number>10</number>
-                    </property>
-                    <property name="value">
-                     <number>255</number>
-                    </property>
-                    <property name="orientation">
-                     <enum>Qt::Horizontal</enum>
-                    </property>
-                    <property name="tickPosition">
-                     <enum>QSlider::TicksBelow</enum>
-                    </property>
-                   </widget>
-                   <widget class="QLabel" name="label_7">
-                    <property name="geometry">
-                     <rect>
-                      <x>10</x>
-                      <y>140</y>
-                      <width>121</width>
-                      <height>17</height>
-                     </rect>
-                    </property>
-                    <property name="text">
-                     <string>Canny down</string>
-                    </property>
-                    <property name="alignment">
-                     <set>Qt::AlignCenter</set>
-                    </property>
-                   </widget>
-                   <widget class="QLabel" name="label_8">
-                    <property name="geometry">
-                     <rect>
-                      <x>160</x>
-                      <y>140</y>
-                      <width>131</width>
-                      <height>20</height>
-                     </rect>
-                    </property>
-                    <property name="text">
-                     <string>Canny up</string>
-                    </property>
-                    <property name="alignment">
-                     <set>Qt::AlignCenter</set>
                     </property>
                    </widget>
                    <widget class="QPushButton" name="cmdRecognitionMarkerArea">
@@ -1465,6 +1345,38 @@
                     </property>
                     <property name="text">
                      <string>Calibrate</string>
+                    </property>
+                   </widget>
+                   <widget class="QLineEdit" name="txtMarkerAreaBlockSize">
+                    <property name="geometry">
+                     <rect>
+                      <x>250</x>
+                      <y>60</y>
+                      <width>41</width>
+                      <height>27</height>
+                     </rect>
+                    </property>
+                    <property name="text">
+                     <string>33</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                    </property>
+                   </widget>
+                   <widget class="QLabel" name="label_7">
+                    <property name="geometry">
+                     <rect>
+                      <x>10</x>
+                      <y>60</y>
+                      <width>231</width>
+                      <height>31</height>
+                     </rect>
+                    </property>
+                    <property name="text">
+                     <string>Block size:</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                     </property>
                    </widget>
                   </widget>
@@ -1484,7 +1396,7 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>0.001</string>
+                     <string>0.05</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1588,7 +1500,7 @@
                      <number>10</number>
                     </property>
                     <property name="value">
-                     <number>40</number>
+                     <number>90</number>
                     </property>
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
